# chess

./: Cargo.toml  README.md
assets/: default.pieces.ron
assets/default/black/: bishop.aseprite  board.aseprite  king.aseprite  knight.aseprite  pawn.aseprite  queen.aseprite  rook.aseprite
assets/default/white/: bishop.aseprite  board.aseprite  king.aseprite  knight.aseprite  pawn.aseprite  queen.aseprite  rook.aseprite
src/: main.rs
src/chess/: asset.rs  component.rs  entity.rs  event.rs  mod.rs  resource.rs  system.rs
