[package]
name = "chess"
version = "0.2.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", features = ["asset_processor", "dynamic_linking", "file_watcher"] }
serde = { version = "1.0.201", features = ["serde_derive"] }


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = [
  "-Clink-arg=-fuse-ld=lld", # Use LLD Linker
  "-Zshare-generics=y",      # (Nightly) Make the current crate share its generic instantiations
  "-Zthreads=0",             # (Nightly) Use improved multithreading with the recommended amount of threads.
]

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe" # Use LLD Linker
rustflags = [
  "-Zshare-generics=n", # (Nightly)
  "-Zthreads=0",        # (Nightly) Use improved multithreading with the recommended amount of threads.
]
